# yivi-portal

./: .dockerignore  .env.sample  .env.testing  .gitattributes  .gitignore  Dockerfile  Dockerfile.django  Dockerfile.django.dev  Dockerfile.nginx  README.md  config.json  db.sqlite3  docker-compose.yml  entrypoint.sh  entrypoint_cron.sh  entrypoint_dev.sh  manage.py  nginx.conf  package-lock.json  pyproject.toml
.github/: organization.py  ruff-lint-reviewer.yml
.github/workflows/: django-container.yml  docker-image.yml  nextjs-container.yml  react-container.yml  ruff-lint-reviewer.yml  ruff-linter.yml  status-checks.yml
portal-frontend/: package-lock.json  package.json  tsconfig.json
portal-frontend/app/: layout.tsx  page.tsx
portal-frontend/store/: index.ts
portal_backend/: admin.py  apps.py  crons.py  dbrelations.mmd  dns_verification.py  notify.py  postman-collection.json  published_check.py  signals.py  trusted_aps_import.py  trusted_rps_import.py  types.py  urls.py  yivi-portal-postman-collection.json
portal_backend/import_schemes/: import_utils.py  trusted_aps_import.py  trusted_rps_import.py
portal_backend/migrations/: 0001_initial.py  0002_alter_organization_country.py  0003_alter_user_email_alter_user_unique_together.py  0003_remove_user_organization_user_organizations.py  0004_remove_relyingparty_approved_rp_details_and_more.py  0005_remove_relyingparty_reviewed_rejected.py  0006_remove_attestationprovider_approved_ap_details_and_more.py  0032_irmaserver.py  (+28 more)
portal_frontend/: components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts
portal_spa/: .dockerignore  .env.sample  Dockerfile.react  Dockerfile.react.dev  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
schememanager/: admin.py  apps.py  context_processors.py  crons.py  dns_verification.py  forms.py  models.py  published_check.py  urls.py  views.py
yivi_auth/: README.md  apps.py  signals.py  urls.py  views.py  yivi.py
yivi_portal/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
(+252 files in other folders)
