[tool.poetry]
name = "yivi-portal"
version = "0.1.0"
description = ""
authors = ["Job Doesburg <job.doesburg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
dnspython = "^2.4.2"
httpx = "^0.25.0"
cryptography = "^41.0.4"
idna = "^3.4"
aioquic = "^0.9.21"
pillow = "^10.1.0"
django-bootstrap5 = "^23.3"
requests = "^2.31.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
