[tool.poetry]
name = "yivi-portal"
version = "0.1.0"
description = ""
authors = ["Job Doesburg <job.doesburg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
dnspython = "^2.4.2"
httpx = "^0.25.0"
cryptography = "^41.0.4"
idna = "^3.4"
aioquic = "^0.9.21"
pillow = "^10.1.0"
django-bootstrap5 = "^23.3"
requests = "^2.31.0"
djangorestframework = "^3.14.0"
fqdn = "^1.5.1"
django-cron = "^0.6.0"
django-imagekit = "^5.0.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
uwsgi = "^2.0.23"
psycopg2-binary = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
