[tool.poetry]
name = "yivi-portal"
version = "0.1.0"
description = ""
authors = ["Job Doesburg <job.doesburg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
dnspython = "^2.4.2"
httpx = "^0.27.0"
cryptography = "^42.0.5"
idna = "^3.4"
aioquic = "^0.9.21"
pillow = "^10.1.0"
django-bootstrap5 = "^23.3"
requests = "^2.31.0"
djangorestframework = "^3.14.0"
fqdn = "^1.5.1"
django-cron = "^0.6.0"
django-imagekit = "^5.0.0"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.7.0"
djangorestframework-simplejwt = "^5.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[tool.poetry.group.prod.dependencies]
uwsgi = "^2.0.23"
psycopg2-binary = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
